[package]
name = "rustscrapper"
version = "0.1.2"
authors = ["Omar Jair Purata Funes <omarpurataf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "*"
scanrs = "*"
yansi = "1.0.1"
apt-cmd = { git = "https://github.com/pop-os/apt-cmd" }
